	* Download and install Collect.apk
	* Start Collect
	* Choose the downloaded survey.collect-mobile file in the file chooser


Install an update
-----------------

    * Stop Collect if it's running
    * Clear data (this will removed any previously collected data)
    * Download and install Collect.apk
    * Start Collect
    * Choose your collect.db file in the file chooser


Changes
-------

2014-10-20

    * Ignored irrelevant child nodes when determining an entity's validation status

2014-10-17

    * Changed the way records/entities are deleted. Using checkboxes and contextual action mode for deletion
    * Made sure node state is updated when related nodes are deleted

2014-10-16

    * Fixed bug where statuses in entity lists weren't updated immediately

2014-10-15

    * Fixed crash when exporting data

2014-10-09

    * Fixed survey import when a survey already is imported
    * Added confirmation dialog when importing survey when data already is entered
    * Included a demo survey, that will load at start-up, when no other survey is imported
    * Migrate database when importing survey from older Collect Server version

2014-09-26

    * Supported new format on .collect-mobile files
    * Verified that the Collect version used to export a survey is supported by Collect Mobile

2014-09-17

    * Fixed crash for some xpath expressions

2014-09-16

    * Showed calculated attributed
    * Fixed bug where the relevance of entities wasn't updated properly
    * Fixed bug where validation of external code list items failed

2014-09-04

    * Fixed bug where calculated attributes where shown

2014-09-02

    * Use node name if label is undefined

2014-07-31

    * Supported free text code items
    * Prevented entity key panel from overlapping node details
    * Added support for latest Collect Server version
    * Translated to Spanish

2014-07-25

    * Fixed crash in species selection

2014-07-23
