@@ -6,10 +6,8 @@ import android.view.KeyEvent;
 import android.view.View;
 import android.view.inputmethod.EditorInfo;
 import android.widget.*;
-import org.openforis.collect.R;
 import org.openforis.collect.android.CodeListService;
 import org.openforis.collect.android.SurveyService;
-import org.openforis.collect.android.gui.util.Attrs;
 import org.openforis.collect.android.viewmodel.UiCode;
 import org.openforis.collect.android.viewmodel.UiCodeAttribute;
 
@@ -119,11 +117,11 @@ class RadioCodeAttributeComponent extends CodeAttributeComponent {
             uiHandler.post(new Runnable() {
                 public void run() {
                     Integer selectedViewId = null;
-                    for (UiCode code : codes) {
+                    for (int i = 0; i < codes.size(); i++) {
+                        UiCode code = codes.get(i);
                         RadioButton radioButton = new RadioButton(context);
+                        radioButton.setId(i + 1);
                         radioButton.setText(code.toString());
-                        int padding = new Attrs(context).dimensionInPixels(R.attr.standardPadding) / 2;
-                        radioButton.setPadding(0, padding, 0, padding);
                         radioGroup.addView(radioButton);
                         codeByViewId.put(radioButton.getId(), code);
                         if (isAttributeCode(code)) {
