@@ -23,11 +23,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-    <LinearLayout
-            android:id="@+id/calculated_attribute_container"
+    <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:paddingTop="32dp">
-    </LinearLayout>
+            android:layout_height="match_parent">
+
+        <LinearLayout
+                android:id="@+id/calculated_attribute_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingTop="32dp"/>
+    </ScrollView>
 </LinearLayout>
